--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Form</title>
-    <link rel="stylesheet" href="c.css" />
+    <link rel="stylesheet" href="index.css" />
     <script
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
@@ -88,7 +88,7 @@
     </div>
 
   
-    <script src="c.js"></script>
+    <script src="index.js"></script>
     <script>
       function sendEmail(){
       Email.send({
