--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <span class="circle one"></span>
           <span class="circle two"></span>
 
-          <form action="https://formsubmit.co/muhammadimrank034@Gmail.com" method="POST">
+          <form action="https://formsubmit.co/muhammadimrank034@gmail.com" method="POST">
             <h3 class="title">Contact us</h3>
             <div class="input-container">
               <input type="text" name="name" class="input" />
