--- a/success.html
+++ b/success.html
@@ -11,8 +11,8 @@
     ></script>
   </head>
   <body>
-    <p>Sucess! We are gonna get back to you very,very soon!
-        Thanks for your Order!
+   <h1>Sucess! We are gonna get back to you very,very soon!</h1>
+       <p> Thanks for your Order!
     </p>
 
   </body>
