--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
     ></script>
   </head>
   <body>
-   <h1>Success! We are gonna get back to you very,very soon!</h1>
+    <h1>Success! <br>We are gonna get back to you very,very soon!</h1><br>
        <p> Thanks for your Order!
     </p>
 
