--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="info">
             <div class="information">
               <img src="img/location.png" class="icon" alt="" />
-              <p>Juhu gally, Near MVM college, Mumbai-400061</p>
+              <p>niggers island</p>
             </div>
             <div class="information">
               <img src="img/email.png" class="icon" alt="" />
@@ -32,7 +32,7 @@
             </div>
             <div class="information">
               <img src="img/phone.png" class="icon" alt="" />
-              <p>7045300606</p>
+              <p>+120-234-432</p>
             </div>
           </div>
 
